client/src/App.css
.TransposeSelect {
  width: 100px;
  position: fixed;
  margin: 0;
  bottom: 2.5rem;
  right: 2.5rem;
}

.MomentWrapper {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.SuggestionWrapper {
  display: flex;
  flex-direction: row;
  position: relative;
}

.PrevMoment.active:before {
  content: 'Current';
  position: absolute;
  margin-left: 1.5rem;
  text-transform: uppercase;
  font-size: 1.5rem;
  top: -1rem;
  opacity: 0.5;
  width: 100px;
  text-align: center;
}

.Suggestions.active:before {
  content: 'Next';
  position: absolute;
  margin-left: 1.5rem;
  text-transform: uppercase;
  font-size: 1.5rem;
  top: -1rem;
  right: 0;
  opacity: 0.5;
  width: 100px;
  text-align: center;
}

.PrevMoment {
  position: fixed;
}

.Suggestions {
  margin-left: 11.5rem;
  min-width: 115px;
}

.Suggestions .Moment:last-of-type {
  margin-bottom: 50vh;
}

.NoSuggestions {
  width: 98px;
  text-align: center;
  margin-top: 3.5rem;
  margin-left: 1.5rem;
  opacity: 0.5;
}

.DeviceSettings {
  position: absolute;
  padding: 1.5rem 2rem;
  user-select: none;
  top: 0;
  left: 0;
  display: none;
}

.DeviceSettings.visible {
  display: initial;
}

@media (max-width: 600px) {
  .DeviceSettings.visible {
    display: none;
  }
}

